// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpensesSummary with 1 expense 1`] = `
<div>
  <h1>
     Viewing 
    1
     
    expense
     totaling 
    1,500.00
     rs 
  </h1>
</div>
`;

exports[`should correctly render ExpensesSummary with multiple expense 1`] = `
<div>
  <h1>
     Viewing 
    23
     
    expenses
     totaling 
    1,502,220.00
     rs 
  </h1>
</div>
`;
